--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,8 @@
     <string name="sign_up">Sign Up</string>
     <string name="enter_your_email_hint">Enter your email</string>
     <string name="enter_your_password_hint">Enter your password</string>
+    <string name="back">Back</string>
+    <string name="register_account">Register Account</string>
+    <string name="confirm_your_password">Confirm your password</string>
+    <string name="register">Register</string>
 </resources>
