--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,8 +3,7 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="login">Login</string>
-    <string name="sign_in_with_google">sign in with google</string>
-    <string name="don_t_have_account">Don\'t have account?</string>
+    <string name="forgot_password">Forgot your password?</string>
     <string name="sign_up">Sign Up</string>
     <string name="enter_your_email_hint">Enter your email</string>
     <string name="enter_your_password_hint">Enter your password</string>
@@ -12,4 +11,10 @@
     <string name="register_account">Register Account</string>
     <string name="confirm_your_password">Confirm your password</string>
     <string name="register">Register</string>
+    <string name="invalid_email_error">Wrong email format.</string>
+    <string name="invalid_password_format">Password must be at least 6 character long.</string>
+    <string name="field_empty_error">Please fill out the %s field!</string>
+    <string name="password_doesnt_match">The confirmation password doesn\'t match.</string>
+    <string name="reset_password">Reset Password</string>
+    <string name="send_reset_link">Send Reset Link</string>
 </resources>
