form profile xml done

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,7 +19,7 @@
     <string name="send_reset_link">Send Reset Link</string>
     <string name="profile">Profile</string>
     <string name="enter_your_name">What\'s your name?</string>
-    <string name="enter_your_birthday">Enter your birthday</string>
+    <string name="enter_your_birthday">When\'s your birthday?</string>
     <string name="enter_your_gender">What\'s your gender?</string>
     <string name="next">NEXT</string>
 </resources>
