Add search by ID button on home page

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="password_doesnt_match">The confirmation password doesn\'t match.</string>
     <string name="reset_password">Reset Password</string>
     <string name="send_reset_link">Send Reset Link</string>
+    <string name="find_your_friend_by_id_here">Find your friend by ID here</string>
 </resources>
