--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,7 @@
     <string name="find_your_friend_by_id_here">Find your friend by ID here</string>
     <string name="same_interest_with_you">Same Interest With You</string>
     <string name="find_others_here">Find others here</string>
+    <string name="today_s_word">Today\'s Word</string>
+    <string name="new_insight">New Insight!</string>
+    <string name="click_to_read_more">Click to read more</string>
 </resources>
