--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,4 +42,6 @@
     <string name="topic_im_interested">Topic I\'m Interested</string>
     <string name="about">About</string>
     <string name="languages">Languages</string>
+    <string name="native">NATIVE</string>
+    <string name="learn">LEARN</string>
 </resources>
