--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,4 +39,5 @@
     <string name="chats">chats</string>
     <string name="txt_native">NATIVE</string>
     <string name="txt_learn">LEARN</string>
+    <string name="filter">Filter</string>
 </resources>
