finish filter box ui

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,4 +43,5 @@
     <string name="topic_im_interested">Topic I\'m Interested</string>
     <string name="about">About</string>
     <string name="languages">Languages</string>
+    <string name="apply">Apply</string>
 </resources>
