add layout for my chat list

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,4 +44,5 @@
     <string name="about">About</string>
     <string name="languages">Languages</string>
     <string name="apply">Apply</string>
+    <string name="my_chats">My chats</string>
 </resources>
